--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codemirror/legacy-modes": "^0.19.0",
     "@codemirror/stream-parser": "^0.19.5",
+    "@codemirror/view": "^0.19.40",
     "@uiw/react-codemirror": "^4.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
