--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "shadow-cljs": "2.25.9"
   },
   "dependencies": {
-    "@codemirror/legacy-modes": "^0.19.0",
-    "@codemirror/stream-parser": "^0.19.5",
-    "@codemirror/view": "^0.19.40",
-    "@uiw/react-codemirror": "^4.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@codemirror/view": "6.21.4",
+    "@nextjournal/lang-clojure": "1.0.0",
+    "@uiw/react-codemirror": "4.21.20",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
